syntax = "proto3";

package peerbeam.transfer;

option go_package = "github.com/krisapa/peerbeam/proto/compiled/transferpb";


message FileBlock {
  string transfer_id = 1;
  bytes data = 2;
  bool is_last_block = 3;
}

message TransferStart {
  string transfer_id = 1;
  bool is_compressed = 2;
}

message TransferComplete {
  string transfer_id = 1;
  bool success = 2;
  string message = 3;
}

